--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
+sudo: required
+dist: trusty
 language: node_js
 node_js:
-  - "iojs"
   - "7"
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+# Repo for newer Node.js versions
+  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s
   - export PATH="$HOME/.yarn/bin:$PATH"
-  deploy:
+cache: yarn
+deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
