--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s
   - export PATH="$HOME/.yarn/bin:$PATH"
 cache: yarn
+before_deploy:
+  - git add -f node_modules/
 deploy:
   provider: pages
   skip_cleanup: true
