--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lite-server": "^2.2.2"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-alpha.6"
+    "bootstrap": "4.0.0-alpha.6",
+    "font-awesome": "^4.7.0"
   }
 }
