--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,14 @@ node_js:
   - "7"
 before_install:
 # Repo for newer Node.js versions
-  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq yarn
-cache: 
-  yarn: true
-install:
-  - yarn  
+  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - 
 before_deploy:
   - git add -f node_modules/
+  # safelist
+branches:
+  only:
+  - master
+  - gh-pages
 deploy:
   provider: pages
   skip_cleanup: true
