--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,23 @@
-sudo: required
-dist: trusty
+sudo: false
 language: node_js
 node_js:
-  - "7"
-before_install:
-# Repo for newer Node.js versions
-  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - 
-before_deploy:
-  - git add -f node_modules/
-  # safelist
+- '6.0'
+cache:
+  directories:
+  - node_modules
 branches:
   only:
   - master
-  - gh-pages
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-  on:
-    branch: master
+notifications:
+  email: false
+before_script:
+- npm prune
+script:
+- npm run build
+- npm test
+after_success:
+- bash ./scripts/deploy.sh
+env:
+  global:
+  - GH_USER: user
+  - GH_REPO: repository
