--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.html",
   "scripts": {
     "start": "npm run lite",
+    "scss": "node-sass -o css/ css/",
     "lite": "lite-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.2.2"
+    "lite-server": "^2.2.2",
+    "node-sass": "^4.5.3"
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
